Update swagger. Make config ID optional on CreateOrUpdate/Preview/Get and do checksum validation if it's present.
